--- a/config_mouse.yaml
+++ b/config_mouse.yaml
@@ -1,17 +1,17 @@
+# MOUSE
 # Experimental Settings
-fps: 50        # camera frame rate (units: frames/sec)
-input_data_path: "data/clean_data"
-result_path: "results/test_bias"
+fps: 30        # camera frame rate (units: frames/sec)
+input_data_path: "data/mouse_data"
+result_path: "results/mouse"
 
 # Signals
-bp_center: 2
+bp_center: 3
 bp_scale: [1, 2]
-bp_rotate: 1
+bp_rotate: 8
 angles:
-  - {"a": 2, "b": 9, "c": 8}
-  - {"a": 2, "b": 22, "c": 21}
-  # - {"a": 7, "b": 6, "c": 5}
-  # - {"a": 20, "b": 19, "c": 18}
+  - {"a": 1, "b": 0, "c": 2}     # snout angle
+  - {"a": 3, "b": 8, "c": 11}    # tail angle
+  - {"a": 0, "b": 3, "c": 8}     # head anlge
 # Morlet Wavelet Transformation
 w: 5
 f_bin: 20       # number of frequency bin
