--- a/config.yaml
+++ b/config.yaml
@@ -8,14 +8,29 @@ bp_center: 2
 bp_scale: [1, 2]
 bp_rotate: 1
 angles:
+  # RIGHT ANTENNAE
+  # - {"a": 6, "b": 5, "c": 4} # tip
   - {"a": 7, "b": 6, "c": 5}
+  # RIGHT FRONT-LEG
   - {"a": 2, "b": 9, "c": 8}
-  - {"a": 2, "b": 12, "c": 11}
-  - {"a": 2, "b": 15, "c": 14}
+  # RIGHT MID-LEG
+  # - {"a": 2, "b": 12, "c": 11}
+  - {"a": 1, "b": 2, "c": 11}
+  # RIGHT BACK-LEG
+  # - {"a": 2, "b": 15, "c": 14}
+  # - {"a": 16, "b": 15, "c": 14}
+  - {"a": 3, "b": 15, "c": 14}
+  
+  # LEFT ANTENNAE
   - {"a": 20, "b": 19, "c": 18}
+  # LEFT FRONT-LEG
   - {"a": 2, "b": 22, "c": 21}
-  - {"a": 2, "b": 25, "c": 24}
-  - {"a": 2, "b": 28, "c": 27}
+  # LEFT MID-LEG
+  # - {"a": 2, "b": 25, "c": 24}
+  - {"a": 1, "b": 2, "c": 24}
+  # LEFT BACK-LEG
+  # - {"a": 2, "b": 28, "c": 27}
+  - {"a": 3, "b": 28, "c": 27}
   
 # Morlet Wavelet Transformation
 w: 5
