--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 # Experimental Settings
 fps: 50        # camera frame rate (units: frames/sec)
-input_data_path: "data/ant_field_round2"
-result_path: "results/round2_legs_antennae"
+input_data_path: "data/ant_field_round2_resnet101/filtered"
+result_path: "results/round2_legs_antennae_resnet101_filtered"
 
 # Signals
 bp_center: 2
