--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,7 @@
 fps: 50          # camera frame rate (units: frames/sec)
 camera_scale: 60 # pixel/cm
 input_data_path: "data/ant_field_round3"
-result_path: "results/round3_legs_antennae"
+result_path: "results/round3_antennae"
 
 # Signals
 bp_center: 2
@@ -13,34 +13,16 @@ angles:
   - {"a": 0, "b": 6, "c": 5}
   # RIGHT ANTENNAE 2
   - {"a": 1, "b": 0, "c": 6}
-  # RIGHT FRONT-LEG
-  - {"a": 2, "b": 1, "c": 8}
-  # RIGHT MID-LEG
-  - {"a": 1, "b": 2, "c": 11}
-  # RIGHT BACK-LEG
-  - {"a": 1, "b": 2, "c": 14}
   
   # LEFT ANTENNAE
   - {"a": 0, "b": 19, "c": 18}
   # LEFT ANTENNAE 2
   - {"a": 1, "b": 0, "c": 19}
-  # LEFT FRONT-LEG
-  - {"a": 2, "b": 1, "c": 21}
-  # LEFT MID-LEG
-  - {"a": 1, "b": 2, "c": 24}
-  # LEFT BACK-LEG
-  - {"a": 1, "b": 2, "c": 27}
 angle_labels:
   - (R) Antennae
   - (R) Antennae 2 
-  - (R) Front-Leg
-  - (R) Middle-Leg
-  - (R) Hind-Leg
   - (L) Antennae 
   - (L) Antennae 2
-  - (L) Front-Leg
-  - (L) Middle-Leg
-  - (L) Hind-Leg
 
 # Morlet Wavelet Transformation
 w: 5
@@ -48,7 +30,7 @@ f_bin: 20       # number of frequency bin
 
 # UMAP
 n_components: 2
-n_neighbors: 50
+n_neighbors: 40
 n_epochs: 15000
 min_dist: 0.01
 negative_sample_rate: 5
