--- a/config.yaml
+++ b/config.yaml
@@ -31,12 +31,12 @@ f_bin: 20       # number of frequency bin
 # UMAP
 n_components: 2
 n_neighbors: 40
-n_epochs: 15000
+n_epochs: 5000
 min_dist: 0.01
-spread: 3.0
+spread: 1.0 # 3.0
 negative_sample_rate: 5
 init: "spectral"
-repulsion_strength: 10
+repulsion_strength: 1.0 # 10
 
 # Clustering (HDBSCAN, GMM)
 
