--- a/config.yaml
+++ b/config.yaml
@@ -1,28 +1,94 @@
-# Experimental Settings
+### Experimental Settings ###
 fps: 50          # camera frame rate (units: frames/sec)
 camera_scale: 60 # pixel/cm
-input_data_path: "data/ant_field_round3"
-result_path: "results/round3_antennae"
+input_data_path: "data/ant_field_round2_resnet101"
+result_path: "results/round2"
 
-# Signals
+### Signals ###
 bp_center: 2
 bp_scale: [1, 2]
 bp_rotate: 1
+
+### Postural Features ###
+# Marker Position
+include_marker_postural: True
+include_marker_kinematic: False
+markers: [0,1,3, 5,6,7, 8,9, 11,12, 14,15, 18,19,20, 21,22, 24,25, 27,28]
+marker_labels: [head, thorax, abdomen, 
+(R) Antennae Tip, (R) Antennae Mid, (R) Antennae Base,
+(R) FL Tip, (R) FL Mid, (R) ML Tip, (R) ML Mid, (R) HL Tip, (R) HL Mid,
+(L) Antennae Tip, (L) Antennae Mid, (L) Antennae Base,
+(L) FL Tip, (L) FL Mid, (L) ML Tip, (L) ML Mid, (L) HL Tip, (L) HL Mid]
+
+# Joint Angle
+include_angle_postural: True
+include_angle_kinematic: False
 angles:
-  # RIGHT ANTENNAE
+  # HEAD
+  - {"a": 0, "b": 1, "c": 2}
+  # ABDOMEN
+  - {"a": 1, "b": 2, "c": 3}
+  # (R) ANTENNAE
   - {"a": 0, "b": 6, "c": 5}
-  # RIGHT ANTENNAE 2
+  # (R) ANTENNAE 2
   - {"a": 1, "b": 0, "c": 6}
-  
-  # LEFT ANTENNAE
+  # (R) LEGS
+  - {"a": 8, "b": 1, "c": 2}
+  - {"a": 11, "b": 1, "c": 2}
+  - {"a": 14, "b": 2, "c": 1}
+  # (L) ANTENNAE
   - {"a": 0, "b": 19, "c": 18}
-  # LEFT ANTENNAE 2
+  # (L) ANTENNAE 2
   - {"a": 1, "b": 0, "c": 19}
+  # (L) LEGS
+  - {"a": 21, "b": 1, "c": 2}
+  - {"a": 24, "b": 1, "c": 2}
+  - {"a": 27, "b": 2, "c": 1}
 angle_labels:
+  - Head
+  - Abdomen
   - (R) Antennae
   - (R) Antennae 2 
+  - (R) Front Leg
+  - (R) Mid Leg
+  - (R) Hind Leg
   - (L) Antennae 
   - (L) Antennae 2
+  - (L) Front Leg
+  - (L) Mid Leg
+  - (L) Hind Leg
+
+# Limb Length
+include_limb_postural: True
+include_limb_kinematic: False
+limbs:
+  - [0,1]
+  - [1,2]
+  - [2,3]
+  - [5,6]
+  - [6,7]
+  - [8,9]
+  - [11,12]
+  - [14,15]
+  - [18,19]
+  - [19,20]
+  - [21,22]
+  - [24,25]
+  - [27,28]
+limb_labels:
+  - Head
+  - Thorax
+  - Abdomen
+  - (R) Antennae Mid-Tip
+  - (R) Antennae Base-Mid
+  - (R) Front Leg
+  - (R) Mid Leg
+  - (R) Hind Leg
+  - (L) Antennae Mid-Tip
+  - (L) Antennae Base-Mid
+  - (L) Front Leg
+  - (L) Mid Leg
+  - (L) Hind Leg
 
 # Morlet Wavelet Transformation
 w: 5
