--- a/config.yaml
+++ b/config.yaml
@@ -114,8 +114,8 @@ max_video_length: 80
 # Save
 save_bodypoints: False
 save_scaled_bodypoints: False
-save_rotated_bodypoints: False
 save_body_orientation_angles: False
+save_rotated_bodypoints: True
 save_angles: False
 save_powers: False
 save_embeddings: False
