--- a/config.yaml
+++ b/config.yaml
@@ -11,7 +11,7 @@ bp_rotate: 1
 
 ### Bad Frames ###
 likelihood_thresh: 0.98
-marker_thresh: 2
+marker_thresh: 1
 bad_fr_pad: 20
 
 ### Postural Features ###
@@ -123,5 +123,5 @@ save_body_orientation_angles: False
 save_rotated_bodypoints: True
 save_angles: False
 save_powers: False
-save_embeddings: True
+save_embeddings: False
 save_clusters: False
