--- a/config.yaml
+++ b/config.yaml
@@ -20,7 +20,7 @@ bp_rotate: 1
 
 ### Postural Features ###
 # Marker Position
-include_marker_postural: True
+include_marker_postural: False
 include_marker_kinematic: False
 markers: [0,1,3, 5,6,7, 8,9, 11,12, 14,15, 18,19,20, 21,22, 24,25, 27,28]
 marker_labels: [head, thorax, abdomen, 
@@ -30,7 +30,7 @@ marker_labels: [head, thorax, abdomen,
 (L) FL Tip, (L) FL Mid, (L) ML Tip, (L) ML Mid, (L) HL Tip, (L) HL Mid]
 
 # Joint Angle
-include_angle_postural: True
+include_angle_postural: False
 include_angle_kinematic: False
 angles:
   # HEAD
@@ -45,6 +45,7 @@ angles:
   - {"a": 8, "b": 1, "c": 2}
   - {"a": 11, "b": 1, "c": 2}
   - {"a": 14, "b": 2, "c": 1}
+
   # (L) ANTENNAE
   - {"a": 0, "b": 19, "c": 18}
   # (L) ANTENNAE 2
@@ -68,7 +69,7 @@ angle_labels:
   - (L) Hind Leg
 
 # Limb Length
-include_limb_postural: True
+include_limb_postural: False
 include_limb_kinematic: False
 limbs:
   - [0,1]
@@ -98,6 +99,8 @@ limb_labels:
   - (L) Front Leg
   - (L) Mid Leg
   - (L) Hind Leg
+
+include_all_postural: True
 
 # Morlet Wavelet Transformation
 w: 5
