--- a/config.yaml
+++ b/config.yaml
@@ -8,6 +8,7 @@ result_path: "results/round2"
 x_bound_std: 2.5
 y_bound_std: 2.5
 velocity_thresh: 40  # pixel/frame; a little over half the body length
+# TODO set threshold based on every video
 
 likelihood_thresh: 0.98
 marker_thresh: 1
@@ -21,7 +22,7 @@ bp_rotate: 1
 ### Postural Features ###
 # Marker Position
 include_marker_postural: False
-include_marker_kinematic: False
+include_marker_kinematic: True
 markers: [0,1,3, 5,6,7, 8,9, 11,12, 14,15, 18,19,20, 21,22, 24,25, 27,28]
 marker_labels: [head, thorax, abdomen, 
 (R) Antennae Tip, (R) Antennae Mid, (R) Antennae Base,
@@ -31,7 +32,7 @@ marker_labels: [head, thorax, abdomen,
 
 # Joint Angle
 include_angle_postural: False
-include_angle_kinematic: False
+include_angle_kinematic: True
 angles:
   # HEAD
   - {"a": 0, "b": 1, "c": 2}
@@ -70,7 +71,7 @@ angle_labels:
 
 # Limb Length
 include_limb_postural: False
-include_limb_kinematic: False
+include_limb_kinematic: True
 limbs:
   - [0,1]
   - [1,2]
@@ -101,6 +102,8 @@ limb_labels:
   - (L) Hind Leg
 
 include_all_postural: True
+include_all_kinematic: True
+include_all_features: True # include_all_postural + include_all_kinematic must be TRUE
 
 # Morlet Wavelet Transformation
 w: 5
