--- a/config.yaml
+++ b/config.yaml
@@ -24,7 +24,7 @@ bp_rotate: 1
 include_marker_postural: False
 include_marker_kinematic: True
 markers: [0,1,3, 5,6,7, 8,9, 11,12, 14,15, 18,19,20, 21,22, 24,25, 27,28]
-angle_kinematic_pca_components: 200
+marker_kinematic_pca_components: 200
 marker_labels: [head, thorax, abdomen, 
 (R) Antennae Tip, (R) Antennae Mid, (R) Antennae Base,
 (R) FL Tip, (R) FL Mid, (R) ML Tip, (R) ML Mid, (R) HL Tip, (R) HL Mid,
@@ -104,8 +104,8 @@ limb_labels:
   - (L) Hind Leg
 
 include_all_postural: False
-include_all_kinematic: False
-include_all_features: False
+include_all_kinematic: True
+include_all_features: True
 
 # Morlet Wavelet Transformation
 w: 5
