--- a/config.yaml
+++ b/config.yaml
@@ -8,6 +8,7 @@ result_path: "results/round2"
 x_bound_std: 2.5
 y_bound_std: 2.5
 velocity_thresh: 40  # pixel/frame; a little over half the body length
+max_limb_length: 20
 # TODO set threshold based on every video
 
 likelihood_thresh: 0.98
@@ -103,7 +104,7 @@ limb_labels:
   - (L) Mid Leg
   - (L) Hind Leg
 
-include_all_postural: False
+include_all_postural: True
 include_all_kinematic: True
 include_all_features: True
 
