--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,7 @@ result_path: "results/round2"
 x_bound_std: 2.5
 y_bound_std: 2.5
 velocity_thresh: 40  # pixel/frame; a little over half the body length
-max_limb_length: 40
+max_limb_length: 35
 # TODO set threshold based on every video
 
 ### Skeleton ###
@@ -46,9 +46,9 @@ bp_rotate: 1
 ### Postural Features ###
 # Marker Position
 include_marker_postural: False
-include_marker_kinematic: True
+include_marker_kinematic: False
 markers: [0,1,3, 5,6,7, 8,9, 11,12, 14,15, 18,19,20, 21,22, 24,25, 27,28]
-marker_kinematic_pca_components: 200
+marker_kinematic_pca_components: 170
 marker_labels: [head, thorax, abdomen, 
 (R) Antennae Tip, (R) Antennae Mid, (R) Antennae Base,
 (R) FL Tip, (R) FL Mid, (R) ML Tip, (R) ML Mid, (R) HL Tip, (R) HL Mid,
@@ -57,8 +57,8 @@ marker_labels: [head, thorax, abdomen,
 
 # Joint Angle
 include_angle_postural: False
-include_angle_kinematic: True
-angle_kinematic_pca_components: 90
+include_angle_kinematic: False
+angle_kinematic_pca_components: 80
 angles:
   # HEAD
   - {"a": 0, "b": 1, "c": 2}
@@ -81,7 +81,6 @@ angles:
   - {"a": 21, "b": 1, "c": 2}
   - {"a": 24, "b": 1, "c": 2}
   - {"a": 27, "b": 2, "c": 1}
-
 angle_labels:
   - Head
   - Abdomen
@@ -98,8 +97,8 @@ angle_labels:
 
 # Limb Length
 include_limb_postural: False
-include_limb_kinematic: True
-limb_kinematic_pca_components: 90
+include_limb_kinematic: False
+limb_kinematic_pca_components: 80
 limbs:
   - [0,1]
   - [1,2]
@@ -129,9 +128,9 @@ limb_labels:
   - (L) Mid Leg
   - (L) Hind Leg
 
-include_all_postural: False
+include_all_postural: True
 include_all_kinematic: False
-include_all_features: True
+include_all_features: False
 
 # Morlet Wavelet Transformation
 w: 5
