--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,7 @@ result_path: "results/round2"
 x_bound_std: 2.5
 y_bound_std: 2.5
 velocity_thresh: 40  # pixel/frame; a little over half the body length
-max_limb_length: 30  # 25
+max_limb_length: 35  # 25
 # TODO set threshold based on every video
 
 ### Skeleton ###
@@ -45,8 +45,8 @@ bp_rotate: 1
 
 ### Postural Features ###
 # Marker Position
-include_marker_postural: False
-include_marker_kinematic: False
+include_marker_postural: True
+include_marker_kinematic: True
 markers: [0,1,3, 5,6,7, 8,9, 11,12, 14,15, 18,19,20, 21,22, 24,25, 27,28]
 marker_kinematic_pca_components: 170
 marker_labels: [head, thorax, abdomen, 
@@ -56,8 +56,8 @@ marker_labels: [head, thorax, abdomen,
 (L) FL Tip, (L) FL Mid, (L) ML Tip, (L) ML Mid, (L) HL Tip, (L) HL Mid]
 
 # Joint Angle
-include_angle_postural: False
-include_angle_kinematic: False
+include_angle_postural: True
+include_angle_kinematic: True
 angle_kinematic_pca_components: 80
 angles:
   # HEAD
@@ -96,8 +96,8 @@ angle_labels:
   - (L) Hind Leg
 
 # Limb Length
-include_limb_postural: False
-include_limb_kinematic: False
+include_limb_postural: True
+include_limb_kinematic: True
 limb_kinematic_pca_components: 80
 limbs:
   - [0,1]
@@ -129,8 +129,8 @@ limb_labels:
   - (L) Hind Leg
 
 include_all_postural: True
-include_all_kinematic: False
-include_all_features: False
+include_all_kinematic: True
+include_all_features: True
 
 # Morlet Wavelet Transformation
 w: 5
@@ -158,7 +158,7 @@ save_bodypoints: True
 save_scaled_bodypoints: False
 save_body_orientation_angles: False
 save_rotated_bodypoints: True
-save_angles: False
+save_angles: True
 save_powers: False
 save_embeddings: True
 save_clusters: False
