--- a/config.yaml
+++ b/config.yaml
@@ -45,8 +45,8 @@ bp_rotate: 1
 
 ### Postural Features ###
 # Marker Position
-include_marker_postural: True
-include_marker_kinematic: True
+include_marker_postural: False
+include_marker_kinematic: False
 markers: [0,1,3, 5,6,7, 8,9, 11,12, 14,15, 18,19,20, 21,22, 24,25, 27,28]
 marker_kinematic_pca_components: 170
 marker_labels: [head, thorax, abdomen, 
@@ -56,8 +56,8 @@ marker_labels: [head, thorax, abdomen,
 (L) FL Tip, (L) FL Mid, (L) ML Tip, (L) ML Mid, (L) HL Tip, (L) HL Mid]
 
 # Joint Angle
-include_angle_postural: True
-include_angle_kinematic: True
+include_angle_postural: False
+include_angle_kinematic: False
 angle_kinematic_pca_components: 80
 angles:
   # HEAD
@@ -96,8 +96,8 @@ angle_labels:
   - (L) Hind Leg
 
 # Limb Length
-include_limb_postural: True
-include_limb_kinematic: True
+include_limb_postural: False
+include_limb_kinematic: False
 limb_kinematic_pca_components: 80
 limbs:
   - [0,1]
