--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,8 @@
 ### Experimental Settings ###
 fps: 50          # camera frame rate (units: frames/sec)
 camera_scale: 60 # pixel/cm
-input_data_path: "data/ant_field_round3"
-result_path: "results/round3"
+input_data_path: "data/ant_field_final"
+result_path: "results/final"
 
 ### Bad Frames ###
 x_bound_std: 2.5
