--- a/config.yaml
+++ b/config.yaml
@@ -42,7 +42,7 @@ bad_fr_pad: 20
 bp_center: 2
 bp_scale: [1, 2]
 bp_rotate: 1
-scale: None
+scale: False
 
 ### Postural Features ###
 # Marker Position
