--- a/config_aicrowd.yaml
+++ b/config_aicrowd.yaml
@@ -95,7 +95,7 @@ limb_threshold:
   - 50
 
 include_all_postural: False
-include_all_kinematic: True
+include_all_kinematic: False
 include_all_features: True
 
 # Morlet Wavelet Transformation
