--- a/config_aicrowd.yaml
+++ b/config_aicrowd.yaml
@@ -1,37 +1,38 @@
-### Experimental Settings ###
-fps: 30          # camera frame rate (units: frames/sec)
-camera_scale: 60 # pixel/cm
-input_data_path: "data/task1_etho"
-result_path: "results/task1_etho"
+############ Experimental Settings ########################################################
+fps: 30                                       # camera frame rate (units: frames/sec)
+camera_scale: 60                              # pixel/cm
+input_data_path: "data/task1_etho"            # folder path of body pose H5 files
+result_path: "results/task1_etho"             # folder path of analyzed results and figures
 
-### Bad Frames ###
-x_bound_std: 2.5
-y_bound_std: 2.5
-velocity_thresh: 40  # pixel/frame; a little over half the body length
-# max_limb_length: 35  # 25
-# TODO set threshold based on every video
-
-### Skeleton ###
+############ Skeleton ########################################################
 skeleton: [
     [0,1],[0,2],[1,3],[2,3],
-    [3,4],[3,5],[5,6],[4,6]
-]
+    [3,4],[3,5],[5,6],[4,6]]
 skeleton_color: [
     'tab:blue','tab:blue','tab:blue','tab:blue',
-    'tab:blue','tab:blue','tab:blue','tab:blue'
-  ]
+    'tab:blue','tab:blue','tab:blue','tab:blue']
+
+skeleton_fill: [
+    {
+        "trapezoid":[0,1,3,2],
+        "fill": "blue"
+    },
+    {
+        "trapezoid":[3,4,6,5],
+        "fill": "blue"
+    }]
 
 likelihood_thresh: 0.98
 marker_thresh: 1
 bad_fr_pad: 20
 
-### Signals ###
+########### Signals ########################################################
 bp_center: 3
 bp_scale: [3,6]
 bp_rotate: 6
 scale: 121
 
-### Postural Features ###
+########### Postural Features ########################################################
 # Marker Position
 include_marker_postural: False
 include_marker_kinematic: False
@@ -131,3 +132,12 @@ save_body_orientation_angles: False
 save_rotated_bodypoints: True
 save_embeddings: True
 save_clusters: False
+
+
+### Bad Frames ###
+# x_bound_std: 2.5
+# y_bound_std: 2.5
+# velocity_thresh: 40  # pixel/frame; a little over half the body length
+# max_limb_length: 35  # 25
+# TODO set threshold based on every video
+
