--- a/config.yaml
+++ b/config.yaml
@@ -3,14 +3,7 @@ fps: 50          # camera frame rate (units: frames/sec)
 camera_scale: 60 # pixel/cm
 input_data_path: "data/ant_field_final"
 result_path: "results/final"
-
-### Bad Frames ###
-x_bound_std: 2.5
-y_bound_std: 2.5
-velocity_thresh: 40  # pixel/frame; a little over half the body length
-# max_limb_length: 35  # 25
-# TODO set threshold based on every video
-
+GPU_project_path: "/rapids/notebooks/host/BM_GPU"
 ### Skeleton ###
 skeleton: [
     [0,1],[1,2],[2,3],
@@ -33,6 +26,7 @@ skeleton_color: [
     'tab:pink','tab:pink',
     'tab:gray','tab:gray',
     'tab:olive','tab:olive']
+skeleton_fill: []
 
 likelihood_thresh: 0.98
 marker_thresh: 1
@@ -62,26 +56,26 @@ include_angle_kinematic: False
 angle_kinematic_pca_components: 70
 angles:
   # HEAD
-  - {"a": 0, "b": 1, "c": 2}
+  - {"a": 0, "b": 1, "c": 2, "method": 0}
   # ABDOMEN
-  - {"a": 1, "b": 2, "c": 3}
+  - {"a": 1, "b": 2, "c": 3, "method": 0}
   # (R) ANTENNAE
-  - {"a": 0, "b": 6, "c": 5}
+  - {"a": 0, "b": 6, "c": 5, "method": 1}
   # (R) ANTENNAE 2
-  - {"a": 1, "b": 0, "c": 6}
+  - {"a": 1, "b": 0, "c": 6, "method": 1}
   # (R) LEGS
-  - {"a": 8, "b": 1, "c": 2}
-  - {"a": 11, "b": 1, "c": 2}
-  - {"a": 14, "b": 2, "c": 1}
+  - {"a": 8, "b": 1, "c": 2, "method": 1}
+  - {"a": 11, "b": 1, "c": 2, "method": 1}
+  - {"a": 14, "b": 2, "c": 1, "method": 1}
 
   # (L) ANTENNAE
-  - {"a": 0, "b": 19, "c": 18}
+  - {"a": 0, "b": 19, "c": 18, "method": 1}
   # (L) ANTENNAE 2
-  - {"a": 1, "b": 0, "c": 19}
+  - {"a": 1, "b": 0, "c": 19, "method": 1}
   # (L) LEGS
-  - {"a": 21, "b": 1, "c": 2}
-  - {"a": 24, "b": 1, "c": 2}
-  - {"a": 27, "b": 2, "c": 1}
+  - {"a": 21, "b": 1, "c": 2, "method": 1}
+  - {"a": 24, "b": 1, "c": 2, "method": 1}
+  - {"a": 27, "b": 2, "c": 1, "method": 1}
 angle_labels:
   - Head
   - Abdomen
@@ -174,8 +168,5 @@ save_bodypoints: True
 save_scaled_bodypoints: True
 save_body_orientation_angles: False
 save_rotated_bodypoints: True
-save_angles: True
-save_limbs: True
-save_powers: True
 save_embeddings: True
 save_clusters: False
