--- a/config_ant.yaml
+++ b/config_ant.yaml
@@ -146,6 +146,10 @@ w: 5
 f_bin: 20       # number of frequency bin
 f_min: 1
 
+# Kinematic & Postural Influence
+postural_weight: 4 # try 1.5, 2, 2.5, 3
+kinematic_weight: 1
+
 # UMAP
 n_components: 2
 n_neighbors: 40
