--- a/config_aicrowd.yaml
+++ b/config_aicrowd.yaml
@@ -3,7 +3,7 @@ fps: 30                                       # camera frame rate (units: frames
 camera_scale: 60                              # pixel/cm
 input_data_path: "data/task1_etho"            # folder path of body pose H5 files
 result_path: "results/task1_etho"             # folder path of analyzed results and figures
-
+GPU_project_path: "/rapids/notebooks/host/BM_GPU"
 ############ Skeleton ########################################################
 skeleton: [
     [0,1],[0,2],[1,3],[2,3],
