--- a/config_ant.yaml
+++ b/config_ant.yaml
@@ -4,6 +4,7 @@ camera_scale: 60 # pixel/cm
 input_data_path: "data/ant_field_final"
 result_path: "results/final"
 GPU_project_path: "/rapids/notebooks/host/BM_GPU"
+
 ### Skeleton ###
 skeleton: [
     [0,1],[1,2],[2,3],
@@ -28,6 +29,7 @@ skeleton_color: [
     'tab:olive','tab:olive']
 skeleton_fill: []
 
+### identifying bad frames ###
 likelihood_thresh: 0.98
 marker_thresh: 1
 bad_fr_pad: 100
@@ -36,19 +38,19 @@ bad_fr_pad: 100
 bp_center: 2
 bp_scale: [1, 2]
 bp_rotate: 1
-scale: False
+scale: False # int
 
 ### Postural Features ###
 # Marker Position
-include_marker_postural: False
-include_marker_kinematic: False
-markers: [0,1,3, 5,6,7, 8,9, 11,12, 14,15, 18,19,20, 21,22, 24,25, 27,28]
-marker_kinematic_pca_components: 170
-marker_labels: [head, thorax, abdomen, 
-(R) Antennae Tip, (R) Antennae Mid, (R) Antennae Base,
-(R) FL Tip, (R) FL Mid, (R) ML Tip, (R) ML Mid, (R) HL Tip, (R) HL Mid,
-(L) Antennae Tip, (L) Antennae Mid, (L) Antennae Base,
-(L) FL Tip, (L) FL Mid, (L) ML Tip, (L) ML Mid, (L) HL Tip, (L) HL Mid]
+# include_marker_postural: False
+# include_marker_kinematic: False
+# markers: [0,1,3, 5,6,7, 8,9, 11,12, 14,15, 18,19,20, 21,22, 24,25, 27,28]
+# marker_kinematic_pca_components: 170
+# marker_labels: [head, thorax, abdomen, 
+# (R) Antennae Tip, (R) Antennae Mid, (R) Antennae Base,
+# (R) FL Tip, (R) FL Mid, (R) ML Tip, (R) ML Mid, (R) HL Tip, (R) HL Mid,
+# (L) Antennae Tip, (L) Antennae Mid, (L) Antennae Base,
+# (L) FL Tip, (L) FL Mid, (L) ML Tip, (L) ML Mid, (L) HL Tip, (L) HL Mid]
 
 # Joint Angle
 include_angle_postural: False
@@ -122,20 +124,20 @@ limb_labels:
   - (L) Front Leg
   - (L) Mid Leg
   - (L) Hind Leg
-limb_threshold:
-  - 15
-  - 25
-  - 25
-  - 15
-  - 15
-  - 25
-  - 25
-  - 25
-  - 15
-  - 15
-  - 25
-  - 25
-  - 25
+# limb_threshold:
+#   - 15
+#   - 25
+#   - 25
+#   - 15
+#   - 15
+#   - 25
+#   - 25
+#   - 25
+#   - 15
+#   - 15
+#   - 25
+#   - 25
+#   - 25
 
 include_all_postural: True
 include_all_kinematic: True
@@ -147,8 +149,8 @@ f_bin: 20       # number of frequency bin
 f_min: 1
 
 # Kinematic & Postural Influence
-postural_weight: 4 # try 1.5, 2, 2.5, 3
-kinematic_weight: 1
+# postural_weight: 4 # try 1.5, 2, 2.5, 3
+# kinematic_weight: 1
 
 # UMAP
 n_components: 2
