--- a/config_mostafizur.yaml
+++ b/config_mostafizur.yaml
@@ -2,7 +2,7 @@
 fps: 7          # camera frame rate (units: frames/sec)
 input_data_path: "data/Mostafizur_Dong"
 result_path: "results/Mostafizur_Dong"
-GPU_project_path: "/rapids/notebooks/host"
+GPU_project_path: "/rapids/notebooks/host/BM_GPU"
 ### Skeleton ###
 skeleton: [
     [0,1],[0,2],[1,2],[6,7],
