--- a/config_ant.yaml
+++ b/config_ant.yaml
@@ -38,15 +38,15 @@ scale: False # int
 
 ########### Postural Features ############
 # Marker Position
-# include_marker_postural: False
-# include_marker_kinematic: False
-# markers: [0,1,3, 5,6,7, 8,9, 11,12, 14,15, 18,19,20, 21,22, 24,25, 27,28]
-# marker_kinematic_pca_components: 170
-# marker_labels: [head, thorax, abdomen, 
-# (R) Antennae Tip, (R) Antennae Mid, (R) Antennae Base,
-# (R) FL Tip, (R) FL Mid, (R) ML Tip, (R) ML Mid, (R) HL Tip, (R) HL Mid,
-# (L) Antennae Tip, (L) Antennae Mid, (L) Antennae Base,
-# (L) FL Tip, (L) FL Mid, (L) ML Tip, (L) ML Mid, (L) HL Tip, (L) HL Mid]
+include_marker_postural: False
+include_marker_kinematic: False
+markers: [0,1,3, 5,6,7, 8,9, 11,12, 14,15, 18,19,20, 21,22, 24,25, 27,28]
+marker_kinematic_pca_components: 170
+marker_labels: [head, thorax, abdomen, 
+(R) Antennae Tip, (R) Antennae Mid, (R) Antennae Base,
+(R) FL Tip, (R) FL Mid, (R) ML Tip, (R) ML Mid, (R) HL Tip, (R) HL Mid,
+(L) Antennae Tip, (L) Antennae Mid, (L) Antennae Base,
+(L) FL Tip, (L) FL Mid, (L) ML Tip, (L) ML Mid, (L) HL Tip, (L) HL Mid]
 
 # Joint Angle
 include_angle_postural: False
@@ -149,7 +149,7 @@ period_min: 0.08  # unit: s ; cannot be lower than 2/fps
 ########### UMAP ###########
 n_components: 2
 n_neighbors: 40
-n_epochs: 10000 
+n_epochs: 20000 
 min_dist: 0.001
 spread: 1.0 # 3.0
 negative_sample_rate: 5
