--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ notebook/figures
 .ipynb_checkpoints
 notebook/dong/4_all_features/memory/
 notebook/mostafizur
+notebook/dong/2_postural_features/memory/
