--- a/config_mostafizur.yaml
+++ b/config_mostafizur.yaml
@@ -48,9 +48,9 @@ angle_kinematic_pca_components: 12
 angles:
   # HEAD
   - {"a": 0, "b": 6, "c": 10, "method": 1}
+  # LEFT EAR
+  - {"a": 1, "b": 6, "c": 10, "method": 1}
   # SNOUT
-  - {"a": 1, "b": 0, "c": 2, "method": 1}
-  # TOP BODY
   - {"a": 7, "b": 6, "c": 8, "method": 1}
   # BOTTOM BODY
   - {"a": 12, "b": 10, "c": 11, "method": 1}
