--- a/config_ant.yaml
+++ b/config_ant.yaml
@@ -136,8 +136,8 @@ limb_labels:
 #   - 25
 #   - 25
 
-include_all_postural: True
-include_all_kinematic: True
+include_all_postural: False
+include_all_kinematic: False
 include_all_features: True
 
 ########### Morlet Wavelet Transformation ###########
