--- a/config_ant.yaml
+++ b/config_ant.yaml
@@ -1,8 +1,8 @@
 ############ Experimental Settings ############
 fps: 50          # camera frame rate (units: frames/sec)
 # camera_scale: 60 # pixel/cm
-input_data_path: "data/ant_field_final"
-result_path: "results/final"
+input_data_path: "data/ant_field_final_filtered"
+result_path: "results/final_filtered"
 GPU_project_path: "/rapids/notebooks/host/BM_GPU"
 
 ############ Skeleton ############
