--- a/config_aicrowd.yaml
+++ b/config_aicrowd.yaml
@@ -96,8 +96,8 @@ limb_threshold:
   - 50
   - 50
 
-include_all_postural: True
-include_all_kinematic: True
+include_all_postural: False
+include_all_kinematic: False
 include_all_features: True
 
 # Morlet Wavelet Transformation
@@ -113,7 +113,7 @@ kinematic_weight: 1
 
 # UMAP
 n_components: 2
-n_neighbors: 60
+n_neighbors: 50
 n_epochs: 20000 
 min_dist: 0.0001
 spread: 1.0 # 3.0
