--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,7 @@
 fps: 50          # camera frame rate (units: frames/sec)
 camera_scale: 60 # pixel/cm
 input_data_path: "data/ant_field_final"
-result_path: "results/final"
+result_path: "ant_antennae"
 GPU_project_path: "/rapids/notebooks/host/BM_GPU"
 ### Skeleton ###
 skeleton: [
